# tws-headless

./: .gitignore  CLAUDE.md  PLUGIN_MANUAL.md  README.md  __init__.py  algorithm_runner.py  async-migration-plan.md  auth.py  client.py  command_server.py  conftest.py  connection_manager.py  const.py  contract_builder.py  data_feed.py  enter_exit.py  ibctl.py  main.py  manage_allocations.py  models.py  order_builder.py  order_reconciler.py  plugin_execution_log.py  plugin_executive.py  plugin_loader.py  portfolio.py  pyproject.toml  rebalancer.py  run_engine.py  run_paper_tests.py  run_paper_tests.sh  security_pool.py  start_trading.sh  trading_engine.py
.github/: FUNDING.yml
algorithms/: __init__.py  allocation_manager.py  base.py  shared_holdings.json  shared_holdings.py
ib/: __init__.py  algo_params.py  async_transport.py  auth.py  bar_store.py  client.py  command_server.py  connection_manager.py  contract_builder.py  data_feed.py  execution_db.py  instruments.json  main.py  message_bus.py  models.py  order_builder.py  order_reconciler.py  plugin_executive.py  plugin_loader.py  plugin_performance.py  plugin_store.py  portfolio.py  rate_limiter.py  rebalancer.py  run_engine.py  trading_engine.py
plugins/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_account_separation.py  test_algorithm_runner.py  test_algorithms.py  test_async_transport.py  test_auth.py  test_bar_store.py  test_builders.py  test_callbacks.py  test_client.py  test_command_server.py  test_connection_manager.py  test_data_feed.py  test_engine_commands.py  test_enter_exit.py  test_execution_db.py  test_ibctl.py  test_main.py  test_message_bus.py  test_models.py  test_order_reconciler.py  test_orders_plugin.py  test_paper_order_session_plugins.py  test_plugin_base.py  test_plugin_execution_log.py  test_plugin_executive.py  test_plugin_loader.py  test_plugin_store.py  (+10 more)
(+61 files in other folders)
