[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ib-portfolio"
version = "0.1.0"
description = "Interactive Brokers headless plugin based trading solution"
requires-python = ">=3.10"
dependencies = [
    "ibapi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
