[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tws-headless"
version = "0.1.0"
description = "TWS Headless — headless plugin-based trading engine for Interactive Brokers"
requires-python = ">=3.10"
dependencies = [
    "ibapi",
]

authors = [
    { name = "Ron", email = "git-commuted@proton.me" }
]
    
keywords = [
    "interactive brokers", 
    "tws", 
    "headless", 
    "stock trading", 
    "asynchronous", 
    "portfolio management", 
    "ibapi", 
    "cli,"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
